# TdFawazSerieTemp

./: .gitignore  CMakeLists.txt  README.md  TimeSeriesGenerator.cpp  main.cpp  test.cpp
headers/: GaussianGenerator.h  KNN.h  SinWaveGenerator.h  StepGenerator.h  TimeSeriesGenerator.h  TimesSeriesDataset.h
src/: GaussianGenerator.cpp  KNN.cpp  SinWaveGenerator.cpp  StepGenerator.cpp  TimeSeriesGenerator.cpp  TimesSeriesDataset.cpp
